# advent2021

./: Cargo.toml  DONOTREADME.md
src/: day1.rs  day2.rs  day3.rs  day4.rs  day4_old.rs  lib.rs
